# RPO_labs

NIRS_6_SEM/: pom.xml
NIRS_6_SEM/src/main/java/: module-info.java
NIRS_6_SEM/src/main/java/ru/iu3/GUI/: EqualizerApp.java  FXMLDocumentController.java  FxmlControllerFirst.java
NIRS_6_SEM/src/main/java/ru/iu3/effect/: BufferSample.java  Chorus.java  Effect.java  Vibrato.java
NIRS_6_SEM/src/main/java/ru/iu3/equalizer/: Equalizer.java  Filter.java  FilterIir.java  FilterInfo.java  FilterInfoIIR.java
NIRS_6_SEM/src/main/java/ru/iu3/player/: AudioPlayer.java  AudioPlayerFirst.java
NIRS_6_SEM/src/main/resources/ru/iu3/GUI/: FXMLDocument.fxml
backend/: pom.xml
backend/front/: package-lock.json
backend/front/src/: App.js  index.js
backend/front/src/components/: Login.jsx  NavigationBar.jsx
backend/front/src/services/: BackendService.jsx
backend/src/main/java/ru/iu3/backend/auth/: SecurityConfiguration.java
backend/src/main/java/ru/iu3/backend/controllers/: ArtistController.java  CountryController.java  MuseumController.java  PaintingController.java  SampleController.java  UserController.java
backend/src/main/java/ru/iu3/backend/models/: Artist.java  Country.java  Museum.java  Painting.java  User.java
backend/src/main/java/ru/iu3/backend/repositories/: UserRepository.java
backend/src/main/resources/: application.properties
fclient/app/: build.gradle.kts
fclient/app/src/main/: AndroidManifest.xml
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/app/src/main/java/ru/iu3/fclient/: MainActivity.java  PinpadActivity.java
fclient/app/src/main/nativeLibs/x86/: .ninja_deps  CMakeCache.txt  cmake_install.cmake
fclient/app/src/main/nativeLibs/x86/include/: cmake_install.cmake
fclient/app/src/main/nativeLibs/x86/pkgconfig/: cmake_install.cmake
fclient/app/src/main/nativeLibs/x86_64/: .ninja_log  build.ninja
fclient/app/src/main/nativeLibs/x86_64/framework/: cmake_install.cmake
fclient/app/src/main/nativeLibs/x86_64/pkgconfig/: cmake_install.cmake
fclient/app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
fclient/app/src/main/res/values/: themes.xml
fclient/app/src/main/res/values-night/: themes.xml
fclient/gradle/: libs.versions.toml
fclient/gradle/wrapper/: gradle-wrapper.properties
(+78 files in other folders)
